# ResearchAgent

./: .env.example  .gitignore  AGENTS_INSTALLATION_GUIDE.md  CONFIGURATION_SUMMARY.md  GROQ_SETUP.md  IMPORT_ERROR_FIX.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
research_bot/: __init__.py  config.py  groq_manager.py  manager.py
research_bot/agents/: __init__.py  planner_agent.py  search_agent.py  writer_agent.py
