[project]
name = "researchagent"
version = "0.1.0"
description = "AI-powered research automation using intelligent agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.31.0",
]
